[package]
authors = [
  "The Real Time For the Masses developers",
  "Jorge Aparicio <jorge@japaric.io>",
  "Per Lindgren <per.lindgren@ltu.se>",
]
categories = ["concurrency", "embedded", "no-std"]
description = "The Real Time for The Masses (RTFM) meta language"
documentation = "https://docs.rs/rtfm-syntax"
edition = "2018"
keywords = []
license = "MIT OR Apache-2.0"
name = "rtfm-syntax"
repository = "https://github.com/rtfm-rs/rtfm-syntax"
version = "0.4.1"

[dependencies]
indexmap = "1.0.2"
proc-macro2 = "1"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "1"

[dev-dependencies]
mock = { path = "mock" }
quote = "1"
trybuild = "1"

[workspace]
members = [
  "mock",
]
